engine/scripting/native_api/dse_api.gen.h

DSE_CAPI_GEN void  dse_dyn_obstacle_set_cylinder_height(uint32_t e, float v);
/* ---- NavMeshAutoRebakeComponent ---- */
DSE_CAPI_GEN int  dse_navmesh_rebake_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_navmesh_rebake_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_tile_size(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_tile_size(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_rebake_cooldown(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_rebake_cooldown(uint32_t e, float v);
DSE_CAPI_GEN int  dse_navmesh_rebake_get_collect_terrain(uint32_t e);
DSE_CAPI_GEN void dse_navmesh_rebake_set_collect_terrain(uint32_t e, int v);
DSE_CAPI_GEN int  dse_navmesh_rebake_get_collect_mesh_renderers(uint32_t e);
DSE_CAPI_GEN void dse_navmesh_rebake_set_collect_mesh_renderers(uint32_t e, int v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_agent_height(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_agent_height(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_agent_radius(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_agent_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_agent_max_climb(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_agent_max_climb(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_agent_max_slope(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_agent_max_slope(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_cell_size(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_cell_size(uint32_t e, float v);
DSE_CAPI_GEN float dse_navmesh_rebake_get_cell_height(uint32_t e);
DSE_CAPI_GEN void  dse_navmesh_rebake_set_cell_height(uint32_t e, float v);
/* ---- PostProcessComponent ---- */
DSE_CAPI_GEN int  dse_post_process_get_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_enabled(uint32_t e, int v);
DSE_CAPI_GEN int  dse_post_process_get_bloom_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_bloom_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_bloom_threshold(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_bloom_threshold(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_bloom_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_bloom_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_bloom_knee(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_bloom_knee(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_bloom_mip_weight(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_bloom_mip_weight(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_color_grading_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_color_grading_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_exposure(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_exposure(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_gamma(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_gamma(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_ssao_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_ssao_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_ssao_radius(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssao_radius(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_ssao_bias(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssao_bias(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_ssao_sample_count(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_ssao_sample_count(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_ssao_power(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssao_power(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_ssao_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_ssao_intensity(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_auto_exposure_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_auto_exposure_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_exposure_min(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_exposure_min(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_exposure_max(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_exposure_max(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_adaptation_speed_up(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_adaptation_speed_up(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_adaptation_speed_down(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_adaptation_speed_down(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_exposure_compensation(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_exposure_compensation(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_color_lut_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_color_lut_intensity(uint32_t e, float v);
DSE_CAPI_GEN int  dse_post_process_get_vignette_enabled(uint32_t e);
DSE_CAPI_GEN void dse_post_process_set_vignette_enabled(uint32_t e, int v);
DSE_CAPI_GEN float dse_post_process_get_vignette_intensity(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_vignette_intensity(uint32_t e, float v);
DSE_CAPI_GEN float dse_post_process_get_vignette_radius(uint32_t e);
DSE_CAPI_GEN void  dse_post_process_set_vignette_radius(uint32_t e, float v);