GameScripts/DSEngine.Runtime/Generated/Native.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_dyn_obstacle_set_cylinder_height")]
    internal static partial void dse_dyn_obstacle_set_cylinder_height(uint e, float v);

    // ---- NavMeshAutoRebakeComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_enabled")]
    internal static partial int dse_navmesh_rebake_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_enabled")]
    internal static partial void dse_navmesh_rebake_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_tile_size")]
    internal static partial float dse_navmesh_rebake_get_tile_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_tile_size")]
    internal static partial void dse_navmesh_rebake_set_tile_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_rebake_cooldown")]
    internal static partial float dse_navmesh_rebake_get_rebake_cooldown(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_rebake_cooldown")]
    internal static partial void dse_navmesh_rebake_set_rebake_cooldown(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_collect_terrain")]
    internal static partial int dse_navmesh_rebake_get_collect_terrain(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_collect_terrain")]
    internal static partial void dse_navmesh_rebake_set_collect_terrain(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_collect_mesh_renderers")]
    internal static partial int dse_navmesh_rebake_get_collect_mesh_renderers(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_collect_mesh_renderers")]
    internal static partial void dse_navmesh_rebake_set_collect_mesh_renderers(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_agent_height")]
    internal static partial float dse_navmesh_rebake_get_agent_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_agent_height")]
    internal static partial void dse_navmesh_rebake_set_agent_height(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_agent_radius")]
    internal static partial float dse_navmesh_rebake_get_agent_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_agent_radius")]
    internal static partial void dse_navmesh_rebake_set_agent_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_agent_max_climb")]
    internal static partial float dse_navmesh_rebake_get_agent_max_climb(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_agent_max_climb")]
    internal static partial void dse_navmesh_rebake_set_agent_max_climb(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_agent_max_slope")]
    internal static partial float dse_navmesh_rebake_get_agent_max_slope(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_agent_max_slope")]
    internal static partial void dse_navmesh_rebake_set_agent_max_slope(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_cell_size")]
    internal static partial float dse_navmesh_rebake_get_cell_size(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_cell_size")]
    internal static partial void dse_navmesh_rebake_set_cell_size(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_get_cell_height")]
    internal static partial float dse_navmesh_rebake_get_cell_height(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_set_cell_height")]
    internal static partial void dse_navmesh_rebake_set_cell_height(uint e, float v);

    // ---- PostProcessComponent ----
    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_enabled")]
    internal static partial int dse_post_process_get_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_enabled")]
    internal static partial void dse_post_process_set_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_bloom_enabled")]
    internal static partial int dse_post_process_get_bloom_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_bloom_enabled")]
    internal static partial void dse_post_process_set_bloom_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_bloom_threshold")]
    internal static partial float dse_post_process_get_bloom_threshold(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_bloom_threshold")]
    internal static partial void dse_post_process_set_bloom_threshold(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_bloom_intensity")]
    internal static partial float dse_post_process_get_bloom_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_bloom_intensity")]
    internal static partial void dse_post_process_set_bloom_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_bloom_knee")]
    internal static partial float dse_post_process_get_bloom_knee(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_bloom_knee")]
    internal static partial void dse_post_process_set_bloom_knee(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_bloom_mip_weight")]
    internal static partial float dse_post_process_get_bloom_mip_weight(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_bloom_mip_weight")]
    internal static partial void dse_post_process_set_bloom_mip_weight(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_color_grading_enabled")]
    internal static partial int dse_post_process_get_color_grading_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_color_grading_enabled")]
    internal static partial void dse_post_process_set_color_grading_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_exposure")]
    internal static partial float dse_post_process_get_exposure(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_exposure")]
    internal static partial void dse_post_process_set_exposure(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_gamma")]
    internal static partial float dse_post_process_get_gamma(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_gamma")]
    internal static partial void dse_post_process_set_gamma(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_enabled")]
    internal static partial int dse_post_process_get_ssao_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_enabled")]
    internal static partial void dse_post_process_set_ssao_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_radius")]
    internal static partial float dse_post_process_get_ssao_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_radius")]
    internal static partial void dse_post_process_set_ssao_radius(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_bias")]
    internal static partial float dse_post_process_get_ssao_bias(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_bias")]
    internal static partial void dse_post_process_set_ssao_bias(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_sample_count")]
    internal static partial int dse_post_process_get_ssao_sample_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_sample_count")]
    internal static partial void dse_post_process_set_ssao_sample_count(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_power")]
    internal static partial float dse_post_process_get_ssao_power(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_power")]
    internal static partial void dse_post_process_set_ssao_power(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_ssao_intensity")]
    internal static partial float dse_post_process_get_ssao_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_ssao_intensity")]
    internal static partial void dse_post_process_set_ssao_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_auto_exposure_enabled")]
    internal static partial int dse_post_process_get_auto_exposure_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_auto_exposure_enabled")]
    internal static partial void dse_post_process_set_auto_exposure_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_exposure_min")]
    internal static partial float dse_post_process_get_exposure_min(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_exposure_min")]
    internal static partial void dse_post_process_set_exposure_min(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_exposure_max")]
    internal static partial float dse_post_process_get_exposure_max(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_exposure_max")]
    internal static partial void dse_post_process_set_exposure_max(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_adaptation_speed_up")]
    internal static partial float dse_post_process_get_adaptation_speed_up(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_adaptation_speed_up")]
    internal static partial void dse_post_process_set_adaptation_speed_up(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_adaptation_speed_down")]
    internal static partial float dse_post_process_get_adaptation_speed_down(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_adaptation_speed_down")]
    internal static partial void dse_post_process_set_adaptation_speed_down(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_exposure_compensation")]
    internal static partial float dse_post_process_get_exposure_compensation(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_exposure_compensation")]
    internal static partial void dse_post_process_set_exposure_compensation(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_color_lut_intensity")]
    internal static partial float dse_post_process_get_color_lut_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_color_lut_intensity")]
    internal static partial void dse_post_process_set_color_lut_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_vignette_enabled")]
    internal static partial int dse_post_process_get_vignette_enabled(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_vignette_enabled")]
    internal static partial void dse_post_process_set_vignette_enabled(uint e, int v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_vignette_intensity")]
    internal static partial float dse_post_process_get_vignette_intensity(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_vignette_intensity")]
    internal static partial void dse_post_process_set_vignette_intensity(uint e, float v);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_get_vignette_radius")]
    internal static partial float dse_post_process_get_vignette_radius(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_post_process_set_vignette_radius")]
    internal static partial void dse_post_process_set_vignette_radius(uint e, float v);
